--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "ember-page-title": "^6.0.3",
     "ember-power-select": "^4.0.3",
     "ember-power-select-typeahead": "^0.8.0",
+    "ember-power-select-with-create": "^0.9.0",
     "ember-progress-bar": "^1.0.0",
     "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
