--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.0.2",
     "ember-file-upload": "^3.0.4",
+    "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^4.4.0",
     "ember-islands": "^1.5.1",
@@ -67,6 +68,7 @@
     "ember-page-title": "^6.0.3",
     "ember-power-select": "^4.0.3",
     "ember-power-select-typeahead": "^0.8.0",
+    "ember-power-select-with-create": "^0.9.0",
     "ember-progress-bar": "^1.0.0",
     "ember-qunit": "^5.1.1",
     "ember-resolver": "^8.0.2",
