--- a/spec/fixtures/settings.yml
+++ b/spec/fixtures/settings.yml
@@ -1,24 +1,24 @@
-# == Schema Information
-#
-# Table name: settings
-#
-#  id    :integer          not null, primary key
-#  key   :string           not null
-#  value :string
-#  type  :string           not null
-#
+  # == Schema Information
+  #
+  # Table name: settings
+  #
+  #  id    :integer          not null, primary key
+  #  key   :string           not null
+  #  value :string
+  #  type  :string           not null
+  #
 
-#  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
-#  See the COPYING file at the top-level directory or at
-#  https://github.com/puzzle/cryptopus.
+  #  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
+  #  Cryptopus and licensed under the Affero General Public License version 3 or later.
+  #  See the COPYING file at the top-level directory or at
+  #  https://github.com/puzzle/cryptopus.
 
-general_country_source_whitelist:
-  key: general_country_source_whitelist
-  value: ["CH"]
-  type: Setting::CountryCode
+  country_source_whitelist:
+    key: country_source_whitelist
+    value: ["CH", "DE"]
+    type: Setting::CountryCode
 
-general_ip_whitelist:
-  key: general_ip_whitelist
-  value: ["0.0.0.0"]
-  type: Setting::IpRange
+  ip_whitelist:
+    key: ip_whitelist
+    value: ["0.0.0.0", "192.168.10.0"]
+    type: Setting::IpRange
