--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,4 @@ yarn-debug.log*
 
 # docker dev setup
 .bash_history
-config/docker/development/home/rails/.yarnrc
-config/docker/development/home/rails/.bundle
-config/docker/development/home/rails/.cache
-config/docker/development/home/rails/.irb_history
-config/docker/development/home/rails/.local
+config/docker/development/home/rails/
