--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
 
       # Run end-to-end tests
       - name: Run system specs
-        if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+        if: github.event_name == 'push' || github.event_name == 'pull_request'
         run: bundle exec rake nightly:e2e --trace
 
       # Cleanup
