Remove SSR Changelog and add Ember Changelog

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "ember-cli-moment-shim": "^3.4.0",
     "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
+    "ember-cli-showdown": "^4.5.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^5.0.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
@@ -62,6 +63,7 @@
     "ember-intl": "^4.4.0",
     "ember-islands": "^1.5.1",
     "ember-load-initializers": "^2.1.2",
+    "ember-markdown-html": "^0.0.1",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.1",
     "ember-notify": "^6.0.0",
