Fix spec, adjust build to run system specs on PR

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,7 @@ db/*.sqlite3
 db/geo_ip.mmdb
 cryptopus_development
 cryptopus_test
-tmp/bash_history
-tmp/cache
-tmp/pids
-tmp/seed
-tmp/sockets
+tmp
 log
 .sass-cache
 public/assets
