Docker dev setup: do not run ember container as root

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
   ember:
     image: cryptopus-dev/ember
     tty: true
+    user: "${UID:-1000}"
     stdin_open: true
     build:
       context: ./config/docker/development
