--- a/spec/fixtures/encryptables.yml
+++ b/spec/fixtures/encryptables.yml
@@ -1,12 +1,10 @@
-# frozen_string_literal: true
-
 # == Schema Information
 #
 # Table name: accounts
 #
 #  id          :integer          not null, primary key
 #  name        :string(70)       default(""), not null
-#  folder_id   :integer          default(0), not null
+#  group_id    :integer          default(0), not null
 #  description :text
 #  username    :binary
 #  password    :binary
@@ -20,8 +18,17 @@
 #  See the COPYING file at the top-level directory or at
 #  https://github.com/puzzle/cryptopus.
 
-class AccountSerializer < ApplicationSerializer
-  attributes :id, :name, :description
+credential1:
+  type: Encryptable::Credentials
+  name: credential1
+  description: description1
+  folder: folder1
+  encrypted_data: '{"password": {"data": "pulO7xz5jDwUVQzbOqJzIw==", "iv": "null" }, "username": {"data": "0CkUu2Bd9eNB4OCuXVC3TA==", "iv": "null"}}'
 
-  belongs_to :folder
-end
+credential2:
+  type: Encryptable::Credentials
+  name: credential2
+  description: description2
+  folder: folder2
+  tag: tag
+  encrypted_data: '{"password": {"data": "X2i8woXXwIHew6zcnBws9Q==", "iv": "null" }, "username": {"data": "Kvkd66uUiNq4Gw4Yh7PvVg==", "iv": "null"}}'
