Cleanup and Frontend changes

--- a/spec/fixtures/encryptables.yml
+++ b/spec/fixtures/encryptables.yml
@@ -32,3 +32,10 @@ credentials2:
   folder: folder2
   tag: tag
   encrypted_data: '{"password":{"iv":null,"data":"X2i8woXXwIHew6zcnBws9Q=="},"username":{"iv":null,"data":"Kvkd66uUiNq4Gw4Yh7PvVg=="}}'
+
+file1:
+  type: Encryptable::File
+  name: Twitter Account secret.txt
+  description: My personal twitter account secret file
+  folder: folder1
+  encrypted_data: '{"file":{"iv":null,"data":"in+CvmqPwRCd5isccjtrXA=="}}'
