--- a/frontend/package.json
+++ b/frontend/package.json
@@ -89,7 +89,7 @@
     "zxcvbn": "^4.4.2"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": ">= 14.*"
   },
   "dependencies": {
     "@puzzleitc/puzzle-shell": "^1.0.0",
