--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,10 +74,12 @@
     "ember-source": "~3.24.0",
     "ember-toggle": "^6.0.2",
     "ember-truth-helpers": "^2.1.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-ember": "^10.5.8",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "loader.js": "^4.7.0",
+    "prettier": "^2.2.1",
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
     "sass": "^1.49.7",
