--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "ember-cli-clipboard": "^0.16.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "~6.0",
+    "ember-cli-htmlbars": "~6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-moment-shim": "^3.4.0",
     "ember-cli-password-strength": "^2.0.0",
@@ -76,7 +76,8 @@
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
     "sass": "^1.49.7",
-    "zxcvbn": "^4.4.2"
+    "zxcvbn": "^4.4.2",
+    "webpack": "^5.65.0"
   },
   "engines": {
     "node": ">= 14.*"
