--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,15 +21,13 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
-    "@ember/test-helpers": "^2.1.4",
+    "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.3",
     "@glimmer/tracking": "^1.0.3",
     "babel-eslint": "^10.0.3",
-    "bootstrap": "^4.3.1",
-    "broccoli-asset-rev": "^3.0.0",
+    "bootstrap": "^4.6.1",
     "ember-auto-import": "^1.10.1",
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^3.1.4",
@@ -42,63 +40,54 @@
     "ember-cli-clipboard": "^0.16.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-eslint": "^5.1.0",
-    "ember-cli-htmlbars": "~6.0",
-    "ember-cli-inject-live-reload": "^2.0.1",
+    "ember-cli-htmlbars": "~6.0.1",
+    "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-moment-shim": "^3.4.0",
     "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-string-helpers": "^5.0.0",
+    "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
     "ember-cli-update": "^0.56.0",
     "ember-data": "~3.24.0",
-    "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.2",
-    "ember-file-upload": "^3.0.4",
+    "ember-fetch": "^8.1.1",
+    "ember-file-upload": "^4.0.3",
     "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
-    "ember-intl": "^4.4.0",
-    "ember-islands": "^1.5.1",
+    "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
     "ember-markdown-html": "^0.0.1",
-    "ember-maybe-import-regenerator": "^0.1.6",
     "ember-moment": "^8.0.1",
-    "ember-notify": "^6.0.0",
-    "ember-page-title": "^6.0.3",
+    "ember-notify": "^6.0.2",
     "ember-power-select": "^4.0.3",
-    "ember-power-select-typeahead": "^0.8.0",
-    "ember-power-select-with-create": "^0.9.0",
-    "ember-progress-bar": "^1.0.0",
-    "ember-qunit": "^5.1.1",
-    "ember-resolver": "^8.0.2",
+    "ember-power-select-typeahead": "^0.9.0",
+    "ember-power-select-with-create": "^0.9.1",
+    "ember-qunit": "^5.1.5",
+    "ember-resolver": "^8.0.3",
     "ember-source": "~3.24.0",
-    "ember-toggle": "^6.0.2",
-    "ember-truth-helpers": "^2.1.0",
-    "ember-validated-form": "^2.0.0",
-    "ember-welcome-page": "^4.0.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-plugin-ember": "^10.1.1",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "ember-toggle": "^9.0.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-ember": "^10.5.9",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.1",
     "loader.js": "^4.7.0",
     "prettier": "^2.2.1",
-    "qunit": "^2.13.0",
-    "qunit-dom": "^1.6.0",
-    "sass": "^1.26.8",
-    "zxcvbn": "^4.4.2"
+    "qunit": "^2.17.2",
+    "qunit-dom": "^2.0.0",
+    "sass": "^1.49.7",
+    "zxcvbn": "^4.4.2",
+    "webpack": "^5.69.1"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": ">= 14.*"
   },
   "dependencies": {
     "@puzzleitc/puzzle-shell": "^1.0.0",
-    "@sentry/browser": "^5.16.1",
-    "@sentry/integrations": "^5.16.1",
-    "clean-css": "^4.2.3",
-    "ember-cli-shims": "^1.2.0",
+    "@sentry/browser": "^6.17.6",
+    "@sentry/integrations": "^6.17.6",
     "minimist": "^1.2.5",
-    "text-security": "^3.1.1"
+    "text-security": "^3.2.1"
   },
   "resolutions": {
     "hosted-git-info": ">=3.0.8",
