--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "ember-bootstrap-power-select": "^2.0.0",
     "ember-changeset": "^3.3.8",
     "ember-changeset-validations": "^3.3.2",
-    "ember-cli": "~4.1.1",
+    "ember-cli": "~4.2.0",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-clipboard": "^0.16.0",
@@ -49,7 +49,6 @@
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
-    "ember-cli-update": "^0.56.0",
     "ember-data": "~3.24.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
@@ -76,8 +75,8 @@
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
     "sass": "^1.49.7",
-    "zxcvbn": "^4.4.2",
-    "webpack": "^5.69.1"
+    "webpack": "^5.69.1",
+    "zxcvbn": "^4.4.2"
   },
   "engines": {
     "node": ">= 14.*"
