--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
+    "ember-loading": "^2.0.0",
     "ember-markdown-html": "^0.0.1",
     "ember-moment": "^8.0.1",
     "ember-notify": "^6.0.2",
