Add support for postgresql

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,19 +6,17 @@
 # PostgreSQL. Versions 8.2 and up are supported.
 #
 base: &generic
-  adapter: <%= ENV['RAILS_DB_ADAPTER'] || 'sqlite3' %>
+  adapter: <%= ENV['RAILS_DB_ADAPTER'] || 'postgresql' %>
   pool: 5
-  timeout: 5000
   encoding: utf8
 <% %w(host port username password).each do |option| %>
   <% value = ENV["RAILS_DB_#{option.upcase}"] %>
   <%= "#{option}: #{value}" if value.present? %>
 <% end %>
 
-
 development:
   <<: *generic
-  database: <%= ENV['RAILS_DB_NAME'] || "#{Rails.root}/db/development.sqlite3" %>
+  database: <%= "#{Rails.root}/db/cryptopus-postgres-development" %>
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -40,7 +38,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *generic
-  database: <%= ENV['RAILS_DB_NAME'] || "#{Rails.root}/db/test.sqlite3" %>
+  database: <%= "#{Rails.root}/db/cryptopus-postgres-test" %>
 
 production:
   <<: *generic
