Enable postgresql for github ci build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,17 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_PASSWORD: password
+    env:
+      RAILS_DB_ADAPTER: 'postgresql'
+      RAILS_DB_HOST: 'postgres'
+      RAILS_DB_PORT: 5432
+      RAILS_DB_USERNAME: postgres
+      RAILS_DB_PASSWORD: password
 
     steps:
       # Checks out a copy of your repository on the ubuntu-latest machine
@@ -62,8 +73,6 @@ jobs:
           key: ${{ runner.os }}-build-cache-v1-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-build-cache-v1-${{ hashFiles('**/package-lock.json') }}
-      - name: Before Install
-        run: sudo service mysql restart
 
       - name: Install bundler
         run: gem install bundler:2.2.17
