Write encryptables_controller specs for new check for file download or show

--- a/spec/fixtures/folders.yml
+++ b/spec/fixtures/folders.yml
@@ -29,3 +29,8 @@ folder4:
 default_folder_bob:
   name: default
   team: personal_team_bob
+
+inbox_folder_alice:
+  name: inbox
+  team: personal_team_alice
+  personal_inbox: true
