Upgrade ruby version to 3.2.2 and update dependency versions

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -108,8 +108,7 @@ Style/FormatStringToken:
 
 
 Style/HashSyntax:
-  Exclude:
-    - lib/tasks/**/*.rake
+  Enabled: false
 
 Style/SymbolArray:
   EnforcedStyle: brackets
