--- a/spec/fixtures/encryptables.yml
+++ b/spec/fixtures/encryptables.yml
@@ -23,6 +23,8 @@ credentials1:
   name: Personal Mailbox
   description: Mailprovider One
   folder: folder1
+  sender_id: null
+  encrypted_transfer_password: null
   encrypted_data: '{"password":{"iv":null,"data":"pulO7xz5jDwUVQzbOqJzIw=="},"username":{"iv":null,"data":"0CkUu2Bd9eNB4OCuXVC3TA=="}}'
 
 credentials2:
