--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,15 +20,29 @@
     "start": "ember serve",
     "test": "ember test"
   },
+  "resolutions": {
+    "handlebars": ">=4.7.7",
+    "hosted-git-info": ">=3.0.8",
+    "lodash": ">=4.17.21",
+    "ssri": ">=8.0.1",
+    "url-parse": ">=1.5.0"
+  },
+  "dependencies": {
+    "@puzzleitc/puzzle-shell": "^1.0.0",
+    "@sentry/browser": "^6.17.6",
+    "@sentry/integrations": "^6.17.6",
+    "minimist": "^1.2.6",
+    "text-security": "^3.2.1"
+  },
   "devDependencies": {
-    "@ember/optional-features": "^2.0.0",
+    "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
     "@ember/test-helpers": "^2.6.0",
-    "@glimmer/component": "^1.0.3",
-    "@glimmer/tracking": "^1.0.3",
+    "@glimmer/component": "^1.0.0",
+    "@glimmer/tracking": "^1.0.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.6.1",
-    "ember-auto-import": "^1.10.1",
+    "ember-auto-import": "^2.6.3",
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^3.1.4",
     "ember-bootstrap-power-select": "^2.0.0",
@@ -49,7 +63,7 @@
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
-    "ember-data": "~3.28.0",
+    "ember-data": "~4.0.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
     "ember-i18n-iso-countries": "^1.5.0",
@@ -64,7 +78,7 @@
     "ember-power-select-with-create": "^0.9.1",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
-    "ember-source": "~3.28.0",
+    "ember-source": "~4.0.0",
     "ember-toggle": "^9.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.9",
@@ -81,18 +95,7 @@
   "engines": {
     "node": ">= 14.*"
   },
-  "dependencies": {
-    "@puzzleitc/puzzle-shell": "^1.0.0",
-    "@sentry/browser": "^6.17.6",
-    "@sentry/integrations": "^6.17.6",
-    "minimist": "^1.2.6",
-    "text-security": "^3.2.1"
-  },
-  "resolutions": {
-    "hosted-git-info": ">=3.0.8",
-    "lodash": ">=4.17.21",
-    "handlebars": ">=4.7.7",
-    "url-parse": ">=1.5.0",
-    "ssri": ">=8.0.1"
+  "ember": {
+    "edition": "octane"
   }
 }
