--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "bootstrap": "^4.6.1",
     "ember-auto-import": "^2.6.3",
     "ember-autofocus-modifier": "^1.0.1",
-    "ember-bootstrap": "^3.1.4",
+    "ember-bootstrap": "5",
     "ember-bootstrap-power-select": "^2.0.0",
     "ember-changeset": "^3.3.8",
     "ember-changeset-validations": "^3.3.2",
@@ -61,7 +61,6 @@
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
     "ember-data": "~4.0.0",
     "ember-fetch": "^8.1.1",
