--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "url-parse": ">=1.5.0"
   },
   "dependencies": {
-    "@puzzleitc/puzzle-shell": "^1.0.0",
+    "@puzzleitc/puzzle-shell": "^1.0.1",
     "@sentry/browser": "^6.17.6",
     "@sentry/integrations": "^6.17.6",
     "minimist": "^1.2.6",
@@ -40,24 +40,21 @@
     "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
-    "babel-eslint": "^10.0.3",
     "bootstrap": "^4.6.1",
     "ember-auto-import": "^2.6.3",
     "ember-autofocus-modifier": "^1.0.1",
-    "ember-bootstrap": "5",
+    "ember-bootstrap": "^5.1.1",
     "ember-bootstrap-power-select": "^2.0.0",
-    "ember-changeset": "^3.3.8",
-    "ember-changeset-validations": "^3.3.2",
-    "ember-cli": "~4.2.0",
+    "ember-changeset": "^4.1.2",
+    "ember-changeset-validations": "^4.1.1",
+    "ember-cli": "^4.12.1",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-clipboard": "^0.16.0",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "~6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-moment-shim": "^3.4.0",
-    "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
@@ -65,12 +62,11 @@
     "ember-data": "~4.0.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
-    "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
     "ember-markdown-html": "^0.0.1",
-    "ember-moment": "^8.0.1",
+    "ember-moment": "^10.0.0",
     "ember-notify": "^6.0.2",
     "ember-power-select": "^4.0.3",
     "ember-power-select-typeahead": "^0.9.0",
@@ -83,12 +79,13 @@
     "eslint-plugin-ember": "^10.5.9",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "i18n-iso-countries": "^7.6.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.2.1",
     "qunit": "^2.17.2",
     "qunit-dom": "^2.0.0",
-    "sass": "^1.49.7",
-    "webpack": "^5.76.0",
+    "sass": "^1.62.1",
+    "webpack": "^5.85.0",
     "zxcvbn": "^4.4.2"
   },
   "engines": {
