--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,13 +25,15 @@
     "hosted-git-info": ">=3.0.8",
     "lodash": ">=4.17.21",
     "ssri": ">=8.0.1",
-    "url-parse": ">=1.5.0"
+    "url-parse": ">=1.5.0",
+    "ember-auto-import": ">=2.0.0"
   },
   "dependencies": {
     "@puzzleitc/puzzle-shell": "^1.0.1",
-    "@sentry/browser": "^6.17.6",
-    "@sentry/integrations": "^6.17.6",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "hosted-git-info": ">=3.0.8",
     "minimist": "^1.2.6",
+    "ssri": ">=8.0.1",
     "text-security": "^3.2.1"
   },
   "devDependencies": {
@@ -79,6 +81,7 @@
     "eslint-plugin-ember": "^10.5.9",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "fast-memoize": "^2.5.2",
     "i18n-iso-countries": "^7.6.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.2.1",
