--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,13 +61,12 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-terser": "^4.0.1",
-    "ember-data": "~4.0.0",
+    "ember-data": "~4.12.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
-    "ember-markdown-html": "^0.0.1",
     "ember-moment": "^10.0.0",
     "ember-notify": "^6.0.2",
     "ember-power-select": "^4.0.3",
@@ -75,7 +74,7 @@
     "ember-power-select-with-create": "^0.9.1",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
-    "ember-source": "~4.0.0",
+    "ember-source": "~4.12.0",
     "ember-toggle": "^9.0.3",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.9",
@@ -89,6 +88,7 @@
     "qunit-dom": "^2.0.0",
     "sass": "^1.62.1",
     "webpack": "^5.85.0",
+    "zero-md": "^2.4.1",
     "zxcvbn": "^4.4.2"
   },
   "engines": {
