--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "lodash": ">=4.17.21",
     "ssri": ">=8.0.1",
     "url-parse": ">=1.5.0",
-    "ember-auto-import": ">=2.0.0"
+    "ember-auto-import": ">=2.0.0",
+    "@embroider/macros": "1.10"
   },
   "dependencies": {
     "@puzzleitc/puzzle-shell": "^1.0.1",
@@ -37,6 +38,7 @@
     "text-security": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/helper-get-function-arity": "^7.16.7",
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
     "@ember/test-helpers": "^2.6.0",
