--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,7 +56,7 @@
     "ember-cli-babel": "^7.26.11",
     "ember-cli-clipboard": "^0.16.0",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "~6.0.1",
+    "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-moment-shim": "^3.4.0",
     "ember-cli-sass": "^10.0.1",
