--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,12 @@
     "@embroider/macros": "1.10"
   },
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
+    "@ember/string": "^3.0.1",
+    "@popperjs/core": "^2.11.7",
     "@puzzleitc/puzzle-shell": "^1.0.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
+    "eslint": "^8.42.0",
     "hosted-git-info": ">=3.0.8",
     "minimist": "^1.2.6",
     "ssri": ">=8.0.1",
@@ -44,8 +48,8 @@
     "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
-    "bootstrap": "^4.6.1",
-    "ember-auto-import": "^2.6.3",
+    "bootstrap": "^5.3.0",
+    "ember-auto-import": "^2.6.0",
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^5.1.1",
     "ember-bootstrap-power-select": "^2.0.0",
@@ -67,7 +71,7 @@
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
     "ember-in-viewport": "^3.9.0",
-    "ember-intl": "^5.7.2",
+    "ember-intl": "5.7.1",
     "ember-load-initializers": "^2.1.2",
     "ember-moment": "^10.0.0",
     "ember-notify": "^6.0.2",
