--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.0.0-0",
+    "@babel/eslint-parser": "^7.22.5",
     "@ember/string": "^3.0.1",
     "@popperjs/core": "^2.11.7",
     "@puzzleitc/puzzle-shell": "^1.0.1",
@@ -46,6 +47,7 @@
     "@ember/optional-features": "^1.3.0",
     "@ember/render-modifiers": "^1.0.2",
     "@ember/test-helpers": "^2.6.0",
+    "@formatjs/intl": "^2.9.0",
     "@glimmer/component": "^1.0.0",
     "@glimmer/tracking": "^1.0.0",
     "bootstrap": "^5.3.0",
@@ -71,7 +73,7 @@
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
     "ember-in-viewport": "^3.9.0",
-    "ember-intl": "5.7.1",
+    "ember-intl-6": "6.0.0",
     "ember-load-initializers": "^2.1.2",
     "ember-moment": "^10.0.0",
     "ember-notify": "^6.0.2",
