--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "ember-resolver": "^8.0.3",
     "ember-source": "~3.24.0",
     "ember-toggle": "^9.0.3",
+    "eslint": "~7.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.9",
     "eslint-plugin-node": "^11.1.0",
