--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,10 +53,10 @@
     "ember-data": "~3.25.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
-    "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
+    "zero-md": "^2.4.1",
     "ember-moment": "^9.0.1",
     "ember-notify": "^6.0.2",
     "ember-power-select": "^4.0.3",
@@ -87,6 +87,7 @@
     "@sentry/browser": "^6.17.6",
     "@sentry/integrations": "^6.17.6",
     "markdown-it": "^13.0.1",
+    "i18n-iso-countries": "^7.6.0",
     "minimist": "^1.2.6",
     "text-security": "^3.2.1"
   },
