--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,8 +34,8 @@
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^3.1.4",
     "ember-bootstrap-power-select": "^2.0.0",
-    "ember-changeset": "^3.3.8",
-    "ember-changeset-validations": "^3.3.2",
+    "ember-changeset": "^3.15.0",
+    "ember-changeset-validations": "^3.16.0",
     "ember-cli": "~4.12.1",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
@@ -45,21 +45,19 @@
     "ember-cli-htmlbars": "~6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-moment-shim": "^3.4.0",
-    "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
-    "ember-data": "~3.24.0",
+    "ember-data": "~3.25.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
-    "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
-    "ember-markdown-html": "^0.0.1",
-    "ember-moment": "^8.0.1",
+    "zero-md": "^2.4.1",
+    "ember-moment": "^9.0.1",
     "ember-notify": "^6.0.2",
     "ember-power-select": "^4.0.3",
     "ember-power-select-typeahead": "^0.9.0",
@@ -88,6 +86,7 @@
     "@puzzleitc/puzzle-shell": "^1.0.0",
     "@sentry/browser": "^6.17.6",
     "@sentry/integrations": "^6.17.6",
+    "i18n-iso-countries": "^7.6.0",
     "minimist": "^1.2.6",
     "text-security": "^3.2.1"
   },
