--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,8 +34,8 @@
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^3.1.4",
     "ember-bootstrap-power-select": "^2.0.0",
-    "ember-changeset": "^3.3.8",
-    "ember-changeset-validations": "^3.3.2",
+    "ember-changeset": "^3.15.0",
+    "ember-changeset-validations": "^3.16.0",
     "ember-cli": "~4.12.1",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
@@ -56,6 +56,7 @@
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
+    "zero-md": "^2.4.1",
     "ember-moment": "^9.0.1",
     "ember-notify": "^6.0.2",
     "ember-power-select": "^4.0.3",
