set node options with run command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,8 +50,6 @@ jobs:
 
       # Setup Node
       - name: Use Node.js
-        env:
-          NODE_OPTIONS: --openssl-legacy-provider
         uses: actions/setup-node@v1
         with:
           node-version: '18.14.0'
@@ -83,6 +81,9 @@ jobs:
 
       - name: Install bundler
         run: gem install bundler:2.3.13
+
+      - name: Set node_options
+        run: set NODE_OPTIONS=--openssl-legacy-provider
 
       - name: Create database
         run: bundle exec rails db:setup
