set node options with run command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,9 @@ jobs:
       - name: Install bundler
         run: gem install bundler:2.3.13
 
+      - name: Set node_options
+        run: set NODE_OPTIONS=--openssl-legacy-provider
+
       - name: Create database
         run: bundle exec rails db:setup
 
