--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "ember-data": "~3.25.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
+    "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
@@ -85,7 +86,6 @@
     "@puzzleitc/puzzle-shell": "^1.0.0",
     "@sentry/browser": "^6.17.6",
     "@sentry/integrations": "^6.17.6",
-    "i18n-iso-countries": "^7.6.0",
     "markdown-it": "^13.0.1",
     "minimist": "^1.2.6",
     "text-security": "^3.2.1"
