--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,7 @@
     "bootstrap": "^4.6.1",
     "ember-auto-import": "^1.10.1",
     "ember-autofocus-modifier": "^1.0.1",
-    "ember-bootstrap": "^3.1.4",
+    "ember-bootstrap": "4.9",
     "ember-bootstrap-power-select": "^2.0.0",
     "ember-changeset": "^3.15.0",
     "ember-changeset-validations": "^3.16.0",
@@ -63,7 +63,7 @@
     "ember-power-select-with-create": "^0.9.1",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
-    "ember-source": "~3.24.0",
+    "ember-source": "3.25.0",
     "ember-toggle": "^9.0.3",
     "eslint": "~7.0.0",
     "eslint-config-prettier": "^8.3.0",
