--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,20 +21,22 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
     "@ember/test-helpers": "^2.6.0",
     "@glimmer/component": "^1.0.3",
     "@glimmer/tracking": "^1.0.3",
+    "@popperjs/core": "^2.11.8",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.6.1",
     "ember-auto-import": "^1.10.1",
     "ember-autofocus-modifier": "^1.0.1",
     "ember-bootstrap": "^3.1.4",
     "ember-bootstrap-power-select": "^2.0.0",
-    "ember-changeset": "^3.3.8",
-    "ember-changeset-validations": "^3.3.2",
-    "ember-cli": "~4.2.0",
+    "ember-changeset": "^3.15.0",
+    "ember-changeset-validations": "^3.16.0",
+    "ember-cli": "~4.12.1",
     "ember-cli-app-version": "^5.0.0",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-clipboard": "^0.16.0",
@@ -43,21 +45,19 @@
     "ember-cli-htmlbars": "~6.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-moment-shim": "^3.4.0",
-    "ember-cli-password-strength": "^2.0.0",
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
-    "ember-data": "~3.24.0",
+    "ember-data": "~3.25.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
     "ember-i18n-iso-countries": "^1.5.0",
     "ember-in-viewport": "^3.9.0",
     "ember-intl": "^5.7.2",
     "ember-load-initializers": "^2.1.2",
-    "ember-markdown-html": "^0.0.1",
-    "ember-moment": "^8.0.1",
+    "ember-moment": "^9.0.1",
     "ember-notify": "^6.0.2",
     "ember-power-select": "^4.0.3",
     "ember-power-select-typeahead": "^0.9.0",
@@ -66,6 +66,7 @@
     "ember-resolver": "^8.0.3",
     "ember-source": "~3.24.0",
     "ember-toggle": "^9.0.3",
+    "eslint": "~7.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.9",
     "eslint-plugin-node": "^11.1.0",
@@ -79,12 +80,13 @@
     "zxcvbn": "^4.4.2"
   },
   "engines": {
-    "node": ">= 14.*"
+    "node": ">= 16.*"
   },
   "dependencies": {
     "@puzzleitc/puzzle-shell": "^1.0.0",
     "@sentry/browser": "^6.17.6",
     "@sentry/integrations": "^6.17.6",
+    "markdown-it": "^13.0.1",
     "minimist": "^1.2.6",
     "text-security": "^3.2.1"
   },
