--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,9 +48,8 @@
     "ember-cli-sass": "^10.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-string-helpers": "^6.1.0",
-    "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-terser": "^4.0.1",
-    "ember-data": "~3.27.0",
+    "ember-data": "~3.28.0",
     "ember-fetch": "^8.1.1",
     "ember-file-upload": "^4.0.3",
     "ember-in-viewport": "^3.9.0",
@@ -63,13 +62,14 @@
     "ember-power-select-with-create": "^0.9.1",
     "ember-qunit": "^5.1.5",
     "ember-resolver": "^8.0.3",
-    "ember-source": "3.27.0",
+    "ember-source": "3.28.0",
     "ember-toggle": "^9.0.3",
     "eslint": "~7.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-ember": "^10.5.9",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "i18n-iso-countries": "^7.6.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.2.1",
     "qunit": "^2.17.2",
@@ -85,6 +85,7 @@
     "@puzzleitc/puzzle-shell": "^1.0.0",
     "@sentry/browser": "^6.17.6",
     "@sentry/integrations": "^6.17.6",
+    "ember-template-lint": "^5.10.3",
     "markdown-it": "^13.0.1",
     "i18n-iso-countries": "^7.6.0",
     "minimist": "^1.2.6",
