--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.22.5",
+    "@babel/plugin-transform-runtime": "^7.22.5",
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^1.0.2",
     "@ember/test-helpers": "^2.6.0",
@@ -82,6 +84,7 @@
     "node": ">= 16.*"
   },
   "dependencies": {
+    "@babel/runtime": "^7.22.5",
     "@puzzleitc/puzzle-shell": "^1.0.0",
     "@sentry/browser": "^6.17.6",
     "@sentry/integrations": "^6.17.6",
